--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,11 +13,13 @@ target 'MyProject' do
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
-    :hermes_enabled => flags[:hermes_enabled],
+    :hermes_enabled => true,
     :fabric_enabled => flags[:fabric_enabled],
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
+
+  pod 'react-native-config', :path => '../node_modules/react-native-config'
 
   target 'MyProjectTests' do
     inherit! :complete
