--- a/package.json
+++ b/package.json
@@ -11,16 +11,32 @@
     "format": "prettier --check ./src"
   },
   "dependencies": {
+    "@react-native-community/hooks": "^2.8.1",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@react-navigation/stack": "^6.2.2",
+    "@reduxjs/toolkit": "^1.8.3",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-config": "^1.4.6",
+    "react-native-flipper": "^0.157.0",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.15.0"
+    "react-native-screens": "^3.15.0",
+    "react-native-shared-element": "^0.8.4",
+    "react-navigation-shared-element": "^3.1.3",
+    "react-redux": "^8.0.2",
+    "redux-flipper": "^2.0.2",
+    "redux-middleware-flipper": "^1.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
     "@babel/runtime": "^7.18.9",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-community/eslint-config": "^3.1.0",
     "@types/jest": "^28.1.6",
     "@types/react": "^18.0.16",
@@ -29,6 +45,7 @@
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "babel-jest": "^28.1.3",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "eslint": "^8.21.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
@@ -36,6 +53,8 @@
     "jest": "^28.1.3",
     "metro-react-native-babel-preset": "^0.72.0",
     "prettier": "^2.7.1",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-svg": "^12.4.4",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.7.4"
   },
